@@ -270,7 +270,7 @@ static int dbd_sqlite3_query(apr_dbd_t *sql, int *nrows, const char *query)
 static const char *dbd_sqlite3_escape(apr_pool_t *pool, const char *arg,
                                       apr_dbd_t *sql)
 {
-    char *ret = sqlite3_mprintf(arg);
+    char *ret = sqlite3_mprintf("%q", arg);
     apr_pool_cleanup_register(pool, ret, (void *) sqlite3_free,
                               apr_pool_cleanup_null);
     return ret;
